add ranks api for production rates for specific country in specific mineral
