# src/routes/api/v1/ranks/index.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import GetProductionRatesRanksController from "../../../../controller/ranks/getProductionRatesRanksController";
+
+const ranksRouter = Router();
+
+ranksRouter.get(
+  "/production-rates",
+  new GetProductionRatesRanksController().handle
+);
+
+export default ranksRouter;
